Fix border spacing on right hand side of board

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body, html {
 /* Body */
 .border-container {
   background-color: #4ade80;
-  width: 602px;
+  width: 610px;
 }
 
 .gameboard-container {
